# ProfileTensor

./: .gitignore  description.md  dir_structure.ini  main.py  pyproject.toml
backup/scripts/: convert_raw_mzml.py  mzml_spectrum_filter.py  testing.ipynb  xml_analyzer.ipynb
scripts/: convert_raw_verify_msms_acquistion.py  testing.ipynb
src/profiletensor/core/: __init__.py  run.py  scan_metadata.py  spectrum.py
src/profiletensor/io/: __init__.py  base.py  registry.py
src/profiletensor/io/readers/: __init__.py  mzml.py  proteowizard.py
src/profiletensor/utils/: __init__.py  external.py
