[project]
name = "profiletensor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "jupyterlab",
    "lxml",
    "matplotlib",
    "notebook",
    "numpy>=2.0.0",
    "pandas",
    "pip>=25.3",
    "pyteomics>=4.6",
    "torch",
    "torchvision",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }